--- a/styles/main.css
+++ b/styles/main.css
@@ -67,7 +67,10 @@ header div {
 }
 
 .notification {
-    display: flex;
+    display: none;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
     justify-content: space-between;
     align-items: center;
     padding: 10px 30px;
